Source/WebKit/qt/declarative/experimental/plugin.cpp
@@ -21,6 +21,8 @@
 #include "qquickwebview_p.h"
 #include "qwebdownloaditem_p.h"
 
+#include "qwebnavigationhistory_p.h"
+
 #include <QtDeclarative/qdeclarative.h>
 #include <QtDeclarative/qdeclarativeextensionplugin.h>
 
@@ -42,6 +44,8 @@ public:
         Q_ASSERT(QLatin1String(uri) == QLatin1String("QtWebKit.experimental"));
 
         qmlRegisterUncreatableType<QWebDownloadItem>(uri, 3, 0, "DownloadItem", QObject::tr("Cannot create separate instance of DownloadItem"));
+        qmlRegisterUncreatableType<QWebNavigationListModel>(uri, 3, 0, "NavigationListModel", QObject::tr("Cannot create separate instance of NavigationListModel"));
+        qmlRegisterUncreatableType<QWebNavigationHistory>(uri, 3, 0, "NavigationHistory", QObject::tr("Cannot create separate instance of NavigationHistory"));
         qmlRegisterExtendedType<QQuickWebView, QQuickWebViewExperimentalExtension>(uri, 3, 0, "WebView");
         qmlRegisterUncreatableType<QQuickWebViewExperimental>(uri, 3, 0, "QQuickWebViewExperimental",
             QObject::tr("Cannot create separate instance of QQuickWebViewExperimental"));
